# LinuxAppDev2021

./: .gitignore
02_TerminalProject/: Makefile  show  show.c
02_TerminalProject/.gitignore/: test1
03_Multifile/: Makefile  const.c  prog  prog-a  prog-so
03_TerminalProject/: show  show.c
04_Text/: debug  randomize.sh  test1
05_Debugging/: 1  Makefile  file  grep  main.c  range
05_Debugging/examples/: test1  test2
05_Debugging/scripts/: debug1  debug2
06_TracingFencing/: Makefile  move  move.c  protect.c  tmp
06_TracingFencing/originals/: test4  test5_PROTECTED
07_Environmental/: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  input  md5_f_out  rhasher  rhasher.c  sha_f_out  test1
07_Environmental/.deps/: rhasher.Po
07_Environmental/autom4te.cache/: output.1  requests  traces.0  traces.1
08_Regexps/: Makefile  Makefile.am  a  config.h.in  config.h.in~  config.status  configure  configure.ac  main.c
08_Regexps/.deps/: main.Po
08_Regexps/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
